# 453501_SATSIUK_OOP

LR1/: LR1.sln
LR1/FactoryApp/: Program.cs
LR1/FactoryApp/Classes/: Department.cs  Machine.cs  MaintenanceRecord.cs  Order.cs  Product.cs  QualityCheck.cs  RawMaterial.cs  Supplier.cs  Warehouse.cs  Worker.cs
LR2/FactoryApp/: Program.cs  Repository.cs
LR2/FactoryApp/Classes/: Department.cs  Machine.cs  MaintenanceRecord.cs  Manager.cs  Material.cs  Order.cs  Person.cs  Product.cs  QualityCheck.cs  Supplier.cs  Warehouse.cs  Worker.cs
LR2/FactoryApp/Interfaces/: IEmployable.cs  IEntity.cs  IMaintainable.cs
LR3/cpp/: CMakeLists.txt  README.md  infrastructure.h  main.cpp  models.h  processor.h  staff.h
LR3/cpp/temp/: CMakeCache.txt  Makefile  app_log.txt  cmake_install.cmake  orders_c++  orders_db.txt
LR4/: LR4.sln
LR4/LR4/: Program.cs
LR5/: LR5.sln
LR5/LR5/: Program.cs
LR6/: .gitignore  CMakeLists.txt  Forecast.csproj  LR6.cpp  Program.cs  README.md  index.html  openApi.json
LR6/Api/: WeatherApi.cpp  WeatherApi.cs  WeatherApi.h
LR6/Clients/: GoogleWeatherDataClient.cpp  GoogleWeatherDataClient.h  IWeatherDataClient.cs  OpenWeatherDataClient.cpp  OpenWeatherDataClient.cs  OpenWeatherDataClient.h  WeatherClientFactory.cpp  WeatherClientFactory.h  WeatherDataClient.h
LR6/Controllers/: CurrentWeatherController.cs  CurrentWeatherController.h
LR6/Models/Weather/: CurrentWeather.cs  CurrentWeather.h
LR6/Properties/: launchSettings.json
LR6/Services/: GeocodingService.cpp  GeocodingService.h
LR6/Shared/Responses/: Status.cs  Status.h  Success.cs  Success.h
LR6/Utils/: ApiCallException.cs  ApiCallException.h
LR6/tests/: test_main.cpp
LR7/: .gitignore  README.md  alembic.ini  main.py  requirements.txt
LR7/alembic/: env.py
LR7/api/: dependencies.py
LR7/api/v1/: accounts.py  analytics.py  auth.py  budgets.py  categories.py  transactions.py
LR7/clients/: database.py  orm_models.py
LR7/controllers/: account_controller.py  account_repository_interface.py  auth_controller.py  budget_controller.py  budget_repository_interface.py  category_controller.py  category_repository_interface.py  transaction_controller.py  transaction_repository_interface.py  user_repository_interface.py
LR7/models/: domain_models.py  request_models.py  response_models.py
LR7/shared/: config.py  errors.py  security.py
LR7/tests/: conftest.py
(+8 files in other folders)
